--- a/assets/css/stylePersonalizado.css
+++ b/assets/css/stylePersonalizado.css
@@ -9,6 +9,22 @@
   position: fixed;
 }
 
+.btnEstilo {
+  display: inline-block;
+  font-size: 10px;
+  padding: 0 10px;
+  position: relative;
+  border-radius: 50px !important;
+  background: #fdd700!important;
+  color: #000 !important;
+  border: none;
+  text-transform: capitalize;
+  letter-spacing: .2px;
+  font-weight: 700;
+  box-shadow: 0 2px 8px 0 rgb(62 62 79 / 23%);
+  transition: .3s linear;
+}
+
 video {
   max-width: 100%;
   width: 100%;
