--- a/assets/css/stylePersonalizado.css
+++ b/assets/css/stylePersonalizado.css
@@ -1,5 +1,4 @@
 #main {
-  /* background-color: red !important; */
   position: relative;
   max-height: 100dvh;
   overflow: hidden;
@@ -27,14 +26,18 @@
   transition: .3s linear;
 }
 
-video {
-  background-size: contain;
+.video-slide {
+  min-width: 100%;
+  min-height: 100%;
 }
 
-@media only screen and (max-width: 1000px) {
-  video {
-    background-position: center right;
-  }
+video {
+  background-size: contain;
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: contain;
+  overflow-clip-margin: content-box;
+  overflow: clip;
 }
 
 #main form .border-geral, a.bordar-geral {
