--- a/assets/css/stylePersonalizado.css
+++ b/assets/css/stylePersonalizado.css
@@ -1,30 +1,30 @@
 #main {
-  position: relative;
-  max-height: 100dvh;
-  overflow: hidden;
+  position: relative !important;
+  max-height: 100dvh !important;
+  overflow: hidden !important;
 }
 
 .btn-menu-person {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  background: #fdd700;
-  padding: 11px 30px;
-  font-size: 15px;
-  color: #000;
-  border-radius: 50px;
-  transition: background-color .3s linear, color .3s linear;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  gap: 10px !important;
+  background: #fdd700 !important;
+  padding: 11px 30px !important;
+  font-size: 15px !important;
+  color: #000 !important;
+  border-radius: 50px !important;
+  transition: background-color .3s linear, color .3s linear !important;
 }
 
 .btn-menu-person:hover {
-  background: #4c4a4a;
-  color: #fff;
+  background: #4c4a4a !important;
+  color: #fff !important;
 }
 
 @media only screen and (min-width: 1000px) {
   #navbar {
-    position: fixed;
+    position: fixed !important;
   } 
 }
 
@@ -34,7 +34,7 @@
 }
 
 .menu-wrap.fixed {
-  box-shadow: none;
+  box-shadow: none !important;
 }
 
 [data-background=dark] .box-container .menu-wrap.fixed {
@@ -46,33 +46,33 @@
 }
 
 .btnEstilo {
-  display: inline-block;
-  font-size: 10px;
-  padding: 0 10px;
-  position: relative;
+  display: inline-block !important;
+  font-size: 10px !important;
+  padding: 0 10px !important;
+  position: relative !important;
   border-radius: 50px !important;
   background: #fdd700!important;
   color: #000 !important;
-  border: none;
-  text-transform: capitalize;
-  letter-spacing: .2px;
-  font-weight: 700;
-  box-shadow: 0 2px 8px 0 rgb(62 62 79 / 23%);
-  transition: .3s linear;
+  border: none !important;
+  text-transform: capitalize !important;
+  letter-spacing: .2px !important;
+  font-weight: 700 !important;
+  box-shadow: 0 2px 8px 0 rgb(62 62 79 / 23%) !important;
+  transition: .3s linear !important;
 }
 
 .video-slide {
-  min-width: 100%;
-  min-height: 100%;
+  min-width: 100% !important;
+  min-height: 100% !important;
 }
 
 video {
-  background-size: contain;
-  min-width: 100%;
-  min-height: 100dvh;
-  object-fit: contain;
-  overflow-clip-margin: content-box;
-  overflow: clip;
+  background-size: contain !important;
+  min-width: 100% !important;
+  min-height: 100dvh !important;
+  object-fit: contain !important;
+  overflow-clip-margin: content-box !important;
+  overflow: clip !important;
 }
 
 #main form .border-geral, a.bordar-geral {
@@ -88,10 +88,10 @@ video {
 }
 
 #map-section {
-  background: url('../img/topbanner17.webp');
-  background-position: top center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background: url('../img/topbanner17.webp') !important;
+  background-position: top center !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
 }
 
 .services .service-wrap .service-section {
